--- a/initial_data_exploration.ipynb
+++ b/initial_data_exploration.ipynb
@@ -383,6 +383,38 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 26,
+   "id": "1ad12ad0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0        11868.624023\n",
+       "1       -11868.624023\n",
+       "2       -11868.624023\n",
+       "3       -11868.624023\n",
+       "4       -11868.624023\n",
+       "             ...     \n",
+       "43556    11899.651367\n",
+       "43557   -11899.651367\n",
+       "43558   -11899.651367\n",
+       "43559    11899.651367\n",
+       "43560   -11899.651367\n",
+       "Name: Lumi_weight, Length: 43561, dtype: float32"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 12,
    "id": "574c1c87",
    "metadata": {},
@@ -731,11 +763,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "fd8c2c79",
+   "execution_count": 28,
+   "id": "bbe33e6c",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\colel\\AppData\\Local\\Temp\\ipykernel_32260\\3077716111.py:1: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  y[y>0] = 1\n",
+      "C:\\Users\\colel\\AppData\\Local\\Temp\\ipykernel_32260\\3077716111.py:2: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  y[y<0] = 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "y[y>0] = 1\n",
+    "y[y<0] = 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "b9fba720",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of signal events: 21963\n",
+      "Number of background events: 21598\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Number of signal events:\", sum(y==1))\n",
+    "print(\"Number of background events:\", sum(y==0))"
+   ]
   }
  ],
  "metadata": {
