--- a/initial_data_exploration.ipynb
+++ b/initial_data_exploration.ipynb
@@ -2,27 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "ce1b56dd",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: h5py in c:\\users\\colel\\anaconda3\\lib\\site-packages (3.11.0)\n",
-      "Requirement already satisfied: numpy>=1.17.3 in c:\\users\\colel\\anaconda3\\lib\\site-packages (from h5py) (1.26.4)\n",
-      "Note: you may need to restart the kernel to use updated packages.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# pip install h5py"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 3,
    "id": "6d5df614",
    "metadata": {},
    "outputs": [],
@@ -36,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "id": "c138fc28",
    "metadata": {},
    "outputs": [],
@@ -48,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "id": "35b4c31d",
    "metadata": {},
    "outputs": [
@@ -254,7 +244,7 @@
        "[5 rows x 35 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -265,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "id": "fc491023",
    "metadata": {},
    "outputs": [
@@ -283,7 +273,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -307,7 +297,7 @@
     "\n",
     "NegLep, PosLep: Negative and Positively charged leptons\n",
     "\n",
-    "Vlep: reconstructed vector bosons (W and Z) that decay\n",
+    "Vlep: reconstructed vector bosons (Z) that decay leptonically\n",
     "\n",
     "## Secondary Index\n",
     "E: Energy\n",
@@ -340,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "id": "28dcf96c",
    "metadata": {},
    "outputs": [
@@ -361,7 +351,7 @@
        "Name: Lumi_weight, Length: 43561, dtype: float32"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -372,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "id": "ce990200",
    "metadata": {},
    "outputs": [],
@@ -383,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 9,
    "id": "1ad12ad0",
    "metadata": {},
    "outputs": [
@@ -404,7 +394,7 @@
        "Name: Lumi_weight, Length: 43561, dtype: float32"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -415,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "id": "574c1c87",
    "metadata": {},
    "outputs": [
@@ -715,7 +705,7 @@
        "[8 rows x 35 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -726,7 +716,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 11,
    "id": "93a21d96",
    "metadata": {},
    "outputs": [],
@@ -736,7 +726,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 12,
    "id": "b30d0103",
    "metadata": {},
    "outputs": [
@@ -763,7 +753,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 13,
    "id": "bbe33e6c",
    "metadata": {},
    "outputs": [
@@ -771,12 +761,12 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\colel\\AppData\\Local\\Temp\\ipykernel_32260\\3077716111.py:1: SettingWithCopyWarning: \n",
+      "C:\\Users\\colel\\AppData\\Local\\Temp\\ipykernel_20160\\3077716111.py:1: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  y[y>0] = 1\n",
-      "C:\\Users\\colel\\AppData\\Local\\Temp\\ipykernel_32260\\3077716111.py:2: SettingWithCopyWarning: \n",
+      "C:\\Users\\colel\\AppData\\Local\\Temp\\ipykernel_20160\\3077716111.py:2: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
@@ -791,7 +781,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 14,
    "id": "b9fba720",
    "metadata": {},
    "outputs": [
@@ -807,6 +797,27 @@
    "source": [
     "print(\"Number of signal events:\", sum(y==1))\n",
     "print(\"Number of background events:\", sum(y==0))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8428fe5e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(43561,)"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y = np.array(y)"
    ]
   }
  ],
