investigating zero MI features

--- a/initial_data_exploration.ipynb
+++ b/initial_data_exploration.ipynb
@@ -717,6 +717,62 @@
   {
    "cell_type": "code",
    "execution_count": 11,
+   "id": "629812a9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "zero_mi_features = [\n",
+    " 'FJ_eta', 'LeadingSubJet_pT', 'LeadingSubJet_Phi', 'NegLep_pT', 'Lep_pT_balance',\n",
+    " 'NegLep_Eta', 'NegLep_Phi', 'FJ_mass', 'LeadingSubJet_Eta', 'SubLeadingSubJet_E',\n",
+    " 'PosLep_Eta', 'SubLeadingSubJet_Eta', 'PosLep_Phi', 'PosLep_pT', 'Vlep_E',\n",
+    " 'Vlep_mass', 'cosThetaStar', 'costheta1', 'costheta2'\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "42a49cb6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "FJ_eta                    1.033157\n",
+       "LeadingSubJet_pT        158.917984\n",
+       "LeadingSubJet_Phi         1.804581\n",
+       "NegLep_pT               140.904022\n",
+       "Lep_pT_balance            0.250998\n",
+       "NegLep_Eta                1.069454\n",
+       "NegLep_Phi                1.821724\n",
+       "FJ_mass                  23.635155\n",
+       "LeadingSubJet_Eta         1.022547\n",
+       "SubLeadingSubJet_E      121.004005\n",
+       "PosLep_Eta                1.052807\n",
+       "SubLeadingSubJet_Eta      1.031423\n",
+       "PosLep_Phi                1.823813\n",
+       "PosLep_pT               141.758698\n",
+       "Vlep_E                  399.189667\n",
+       "Vlep_mass                12.400199\n",
+       "cosThetaStar              0.446519\n",
+       "costheta1                 0.495226\n",
+       "costheta2                 0.299050\n",
+       "dtype: float32"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data_zero = df[zero_mi_features]\n",
+    "data_zero.std()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "id": "93a21d96",
    "metadata": {},
    "outputs": [],
@@ -726,7 +782,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "b30d0103",
    "metadata": {},
    "outputs": [
@@ -753,7 +809,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "bbe33e6c",
    "metadata": {},
    "outputs": [
@@ -761,12 +817,12 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\colel\\AppData\\Local\\Temp\\ipykernel_20160\\3077716111.py:1: SettingWithCopyWarning: \n",
+      "C:\\Users\\colel\\AppData\\Local\\Temp\\ipykernel_20864\\3077716111.py:1: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  y[y>0] = 1\n",
-      "C:\\Users\\colel\\AppData\\Local\\Temp\\ipykernel_20160\\3077716111.py:2: SettingWithCopyWarning: \n",
+      "C:\\Users\\colel\\AppData\\Local\\Temp\\ipykernel_20864\\3077716111.py:2: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
@@ -781,7 +837,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "b9fba720",
    "metadata": {},
    "outputs": [
@@ -801,21 +857,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "8428fe5e",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(43561,)"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "y = np.array(y)"
    ]
